--- a/application/production.yml
+++ b/application/production.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   telestion:
-    image: "ghcr.io/##REPO_USER##/##REPO_NAME##:##TAG##"
+    image: "ghcr.io/my-telestion-project/my-telestion-project:##TAG##"
     restart: unless-stopped
     ports:
       # passthroughs TCP EventBus Bridge to allow connections from clients on host
@@ -11,7 +11,7 @@ services:
       # pass configuration to container
       - type: bind
         source: "./conf"
-        target: "/usr/telestion/##REPO_NAME##/conf"
+        target: "/usr/telestion/my-telestion-project/conf"
 
 # rename default docker network
 networks:
